# shoddycast-roll-sim

./: .envrc  Cargo.toml  flake.nix  readme.md
src/: implementation.rs  main.rs
