[package]
name = "shoddycast-roll-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
num-format = "0.4"
rand = { version = "0.9.0-alpha.2", features = ["nightly", "simd_support"] }
rand_xoshiro = "0.6.0"
rayon = "1"
wyrand = { version = "0.2", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["x86"]
x86 = []
avx512 = ["x86"]
